# SYCTF

./: .gitignore  .syctfconfig  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  syctf.py
assets/: __init__.py
examples/: wordlist.txt
modules/ai/: __init__.py  auto_decode.py  exploit_generator.py  session.py  writeup_generator.py
modules/crypto/: __init__.py  base64_codec.py  hash_identifier.py
modules/misc/: env_check.py  smart_decode.py
modules/pwn/: __init__.py  cyclic.py  elf_analyze.py  elf_analyzer.py
modules/recon/: __init__.py
modules/rev/: strings_analyzer.py  triage.py
modules/web/: __init__.py  param_fuzzer.py  quick_fuzz.py  quick_recon.py
modules/workspace/: workspace_set_target.py
syctf/: __init__.py  __main__.py
syctf/ai/: __init__.py  client.py  ollama_resolver.py
syctf/analyzers/pwn/: elf_analyzer.py
syctf/cli/: ai_setup.py  app.py  banner.py  main.py  shell.py
syctf/core/: banner.py  benchmark.py  cache_store.py  config.py  execution.py  logging_setup.py  paths.py  plugin_loader.py  plugin_marketplace.py  types.py  validation.py  workspace_state.py
syctf/modules/: __init__.py
syctf/modules/ai/: auto_decode.py  category_detector.py  exploit_generator.py  session.py  writeup_generator.py
syctf/modules/crypto/: caesar_bruteforce.py
syctf/modules/fuzz/: __init__.py  word_mutator.py
syctf/modules/misc/: __init__.py
syctf/modules/pwn/: __init__.py  elf_analyze.py  elf_analyzer.py  offset.py
syctf/modules/recon/: http_headers.py  port_scan.py  robots_fetch.py
(+5 files in other folders)
